--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "node --import tsx src/index.ts"
+    "start": "node --import tsx src/index.ts",
+    "prepare-data": "node --import tsx src/prepare-test-data.ts",
+    "crawl-tests": "node --import tsx src/crawl-tests.ts"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +14,8 @@
   "dependencies": {
     "jsdom": "^25.0.1",
     "rdf-ext": "^2.5.1",
-    "rdf-parser-csvw": "^1.0.0"
+    "rdf-parser-csvw": "^1.0.0",
+    "rdfjs-c14n": "^3.1.3"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.7",
